<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud"
    tools:context=".TheOptions">

    <RadioGroup
        android:id="@+id/bombcount"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bombTotal" />

    <RadioGroup
        android:id="@+id/gameSize"
        android:layout_width="250dp"
        android:layout_height="124dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boardSize" />

    <TextView
        android:id="@+id/boardSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_board_size"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/bombTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_number_of_bombs"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/gameSize"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/totalPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_games_played"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="496dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_configuration"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/totalPlayed"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="496dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/config"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="511dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/resetGamesPlayed"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/bestScore"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/reset_total_games"
        tools:layout_editor_absoluteX="468dp"
        tools:layout_editor_absoluteY="256dp" />

    <Button
        android:id="@+id/resetScore"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/resetGamesPlayed"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:text="@string/reset_best_score"
        tools:layout_editor_absoluteX="487dp"
        tools:layout_editor_absoluteY="321dp" />
</androidx.constraintlayout.widget.ConstraintLayout>